--- a/app/views/orders/complete.html.erb
+++ b/app/views/orders/complete.html.erb
@@ -5,10 +5,11 @@
 	  注文が完了しました
      </div>
 	  <div class="complete-text">
-	  お客様の注文番号は<span class="under"><<%= @order.order_number %>></span>です。<br>
+	  お客様の注文番号は<span class="under">
+	  	<%= @order.order_number %></span>です。<br>
 	  	この番号は失くさないようにして下さい。<br>
 	  	<br>
-	  	注文した商品の詳細はこちら<br>
+	  	注文した商品の詳細は<%= link_to 'こちら',user_order_path(:user_id => @order.user.id)%><br>
 	  	<br>
 	  	<%= link_to "他の商品を探す" ,root_path, class:"btn btn-default btn-lg" %>
 	 </div>
