ユーザ情報編集、まとめ買い割引、規約チェック必須、入力欄消えないように修正

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -4,8 +4,8 @@
 
 .user-show-back {
   width:100%;
-  height:800px;
-  background-color:#dcdcdc;
+
+
 }
 .user-show {
   font-size:15px;
@@ -16,6 +16,7 @@
   padding:5px;
   border-radius: 5px;
   border-color:#dcdcdc;
+  width: 800px;
 }
 .user-box {
   background-color:white;
@@ -25,6 +26,7 @@
   padding:5px;
   border-radius: 5px;
   border-color:#dcdcdc;
+  width: 800px;
 }
 .td-purchase {
   height:80px;
