--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -11,7 +11,7 @@
 
 	       <div class="sendbox">
 	         <h4>請求先住所</h4>
-	   	
+
 	       <div class="address-form">
 	   	     <%= @user.address %>
 	       </div>
@@ -57,9 +57,19 @@
 		　　<td>商品合計数 </td>
 		　　<td><%= @total_quantity %></td>
 		　</tr>
+			<% if @total_price >= 10000 %>
+		  <% down_price=@total_price *0.1 %>
+		  <tr>
+			 	<td>割引額</td>
+				<td> -<%= down_price.floor.to_s(:delimited) %>円</td>
+		  </tr>
+			<% @total_price -= down_price %>
 		　<tr>
 		　　<td>ご請求額 </td>
-		　　<td> <%= @total_price %>円</td>
+				<td> <%= @total_price.floor.to_s(:delimited) %>円</td>
+				<% else %>
+				<td> <%= @total_price.floor.to_s(:delimited) %>円</td>
+				<% end %>
 		　　 <%= f.hidden_field :order_number, :value => rand(1..9).to_s + "-" + rand(1000..9999).to_s + "-" + rand(1000..9999).to_s %>
 			<%= f.hidden_field :total_price, :value =>"#{@total_price}" %>
 			<%= f.hidden_field :status_id, :value =>1 %>
