--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -91,7 +91,6 @@
 			    <% end %>
 		     <ol>
 			     <% @product.reviews.each do |review| %>
-			  <li class="user-comment">
 			    <div>
 				  ユーザー：<%= review.user.user_name %>
 				</div>
@@ -114,7 +113,21 @@
            <% if user_signed_in? %>
 		<div class="product-comment-newbox">
 			レビューを書く
-			<%= form_for [@product, @review] do |f| %>
+<!-- テスト-->
+	<%= form_for [@product, @review] do |f| %>
+		<div class="evaluation">
+    		<input id="star1" type="radio" name="star" value="5" />
+    		<label for="star1">★</label>
+    		<input id="star2" type="radio" name="star" value="4" />
+    		<label for="star2">★</label>
+    		<input id="star3" type="radio" name="star" value="3" />
+    		<label for="star3">★</label>
+    		<input id="star4" type="radio" name="star" value="2" />
+    		<label for="star4">★</label>
+    		<input id="star5" type="radio" name="star" value="1" />
+    		<label for="star5">★</label>
+		</div>
+<!-- テスト終わり -->
 
                 <%= f.text_area :comment, rows:'5', class: "form-control"%>
                  <%= f.submit "送信する", class: "btn btn-lg btn-primary btn-block pull-right" %>
@@ -125,18 +138,18 @@
 		<div class="newproduct-space3 clearfix">
 			<div class="product-heading">関連商品一覧</div>
 
-			<!-- test -->
+
 			<% @same_genre.shuffle.first(5).each do |t| %>
 			<%= link_to product_path(t), :style=>"text-decoration: none; color:black;" do %>
 			<div class="rankin-product">
 
-				<div class="ranking-image"><%= attachment_image_tag t, :image, :fill, 92, 90, format: 'jpeg' %></div>
+				<div class="ranking-image"><%= attachment_image_tag t, :image, :fill, 130, 130, format: 'jpeg' %></div>
 				<div class="ranking-artist-text"><%= t.artist.artist_name %></div>
 				<div class="ranking-product-text"><%= t.product_name %></div>
 			</div>
 			<% end %>
 			<% end %>
-			<!-- test end -->
+
 		</div>
 	</div>
 </div>
